--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,16 @@
     <string name="title_setting">S E T T I N G</string>
 
     <string name="hint_write">함께했던 소중한 추억을 기록하세요.</string>
+    <string name="hint_plan">일정을 입력하세요.</string>
+    <string name="hint_time">시간을 입력하세요.</string>
+    <string name="hint_place">장소를 입력하세요.</string>
 
-    <string name="format_today">%s년 %s월 %s일</string>
+    <string name="format_date">%s년 %s월 %s일</string>
     <string name="format_month">%s월</string>
     <string name="format_year_month">%s년 %s월</string>
+    <string name="format_time_set1">%d%s</string>
+    <string name="format_time_set2">%d:%s%s</string>
+    <string name="format_failed_request">%s : %s</string>
 
     <string name="btn_primary">기본</string>
     <string name="btn_gallery">사진첩</string>
@@ -27,9 +33,9 @@
     <string name="dialog_yes">예</string>
     <string name="dialog_no">아니오</string>
     <string name="dialog_delete_contents">작성된 내용을 지우시겠습니까?</string>
+    <string name="dialog_delete_diary">일기를 삭제하시겠습니까?</string>
+    <string name="dialog_delete_plan">일정을 삭제하시겠습니까?</string>
     <string name="dialog_want_to_quit">위드를 종료하시겠습니까?</string>
-
-    <string name="log_failed_request">%s : %s</string>
 
     <string name="toast_checking_album">사진첩을 조회 중입니다.</string>
     <string name="toast_choice_gender">성별을 선택하세요.</string>
@@ -37,13 +43,28 @@
     <string name="toast_input_auth_number">인증번호를 입력하세요.</string>
     <string name="toast_invalid_auth_number">유효하지 않은 인증번호입니다.</string>
     <string name="toast_write_diary">일기를 작성하세요.</string>
-    <string name="toast_register_diary">일기가 등록되었습니다.</string>
+    <string name="toast_register_diary">새 글이 등록되었습니다.</string>
+    <string name="toast_input_plan">일정을 입력하세요.</string>
+    <string name="toast_input_all">모든 항목을 입력하세요.</string>
 
     <string name="system_setting">설정</string>
     <string name="system_denied_permission">"권한 허가를 거부하시면 이 서비스를 이용하실 수 없습니다.\n\n[설정] > [권한]에서 권한을 켜십시오."</string>
 
     <string name="text_welcome">위드를 찾아주신 커플 여러분들을 환영합니다.</string>
     <string name="text_auth">연인에게 전달받은 번호를 입력하세요.\n\n또는, 연인에게 인증번호를 전달하세요.</string>
+    <string name="text_delete">DELETE</string>
+    <string name="text_account">계정</string>
+    <string name="text_profile">프로필 편집</string>
+    <string name="text_notification">알림</string>
+    <string name="text_notice_with">위드 알림</string>
+    <string name="text_notify">공지 알림</string>
+    <string name="text_notice_event">이벤트 정보 수신</string>
+    <string name="text_service">서비스 정보</string>
+    <string name="text_notice">공지사항</string>
+    <string name="text_information">위드 앱 정보</string>
+    <string name="text_sign_out">탈퇴하기</string>
+    <string name="text_latest">최신 버전 사용 중</string>
+    <string name="text_update">업데이트</string>
 
     <string name="label_mon">M O N</string>
     <string name="label_tue">T U E</string>
