--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="hint_time">시간을 입력하세요.</string>
     <string name="hint_place">장소를 입력하세요.</string>
     <string name="hint_nickname">애칭을 입력하세요.</string>
+    <string name="hint_alias">별명을 입력하세요.</string>
 
     <string name="format_date">%s년 %s월 %s일</string>
     <string name="format_date2">%s-%s-%s</string>
@@ -34,6 +35,8 @@
     <string name="btn_signup">시작하기</string>
     <string name="btn_auth">인증하기</string>
     <string name="btn_registration">등록하기</string>
+    <string name="btn_solo">혼자쓰기</string>
+    <string name="btn_couple">같이쓰기</string>
 
     <string name="dialog_yes">예</string>
     <string name="dialog_no">아니오</string>
@@ -80,6 +83,7 @@
     <string name="text_location">%s에서</string>
     <string name="text_somewhere">어딘가</string>
     <string name="text_nickname">커플 애칭으로 상단 타이틀을 변경해보아요.</string>
+    <string name="text_alias">별명으로 상단 타이틀을 변경해보아요.</string>
     <string name="text_blur">사진에 흐림 효과를 주세요.</string>
 
     <string name="label_mon">M O N</string>
