--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="dialog_delete_diary">일기를 삭제하시겠습니까?</string>
     <string name="dialog_delete_plan">일정을 삭제하시겠습니까?</string>
     <string name="dialog_want_to_quit">위드를 종료하시겠습니까?</string>
+    <string name="dialog_want_to_sign_out">기록하신 데이터는 모두 삭제됩니다.\n 위드를 탈퇴하시겠습니까?</string>
 
     <string name="toast_checking_album">사진첩을 조회 중입니다.</string>
     <string name="toast_choice_gender">성별을 선택하세요.</string>
