--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="toast_input_all">모든 항목을 입력하세요.</string>
     <string name="toast_choice_gallery">사진을 선택하세요.</string>
     <string name="toast_search_version">버전정보를 조회하고 있습니다.</string>
+    <string name="toast_exceeded_character">글자 수를 초과했습니다.</string>
 
     <string name="snack_selected_gallery">사진이 선택되었습니다.</string>
 
