--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="hint_place">장소를 입력하세요.</string>
     <string name="hint_nickname">애칭을 입력하세요.</string>
     <string name="hint_alias">별명을 입력하세요.</string>
+    <string name="hint_gender">내 성별을 입력하세요.</string>
 
     <string name="format_date">%s년 %s월 %s일</string>
     <string name="format_date2">%s-%s-%s</string>
