Registered FCM Topic.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">위드</string>
     <string name="app_name_en">with</string>
     <string name="app_developer">ⓒ k x x c n</string>
+    <string name="app_topic">admin</string>
 
     <string name="title">WITH</string>
     <string name="title_write">WRITE</string>
