Added the resources.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="app_developer">ⓒ k x x c n</string>
     <string name="app_topic">admin</string>
 
+    <string name="ad_id">ca-app-pub-1655234429103343~9006659424</string>
+    <string name="ad_unit_id">ca-app-pub-1655234429103343/4743625569</string>
+
     <string name="title">WITH</string>
     <string name="title_write">WRITE</string>
     <string name="title_you">YOU</string>
