--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,6 +120,7 @@
     <string name="text_location">From %s</string>
     <string name="text_somewhere">somewhere</string>
     <string name="text_from">From</string>
+    <string name="text_font">FONT</string>
     <string name="text_nickname">Change the title at the top with the couple\'s nickname.</string>
     <string name="text_alias">Change the title at the top with another name.</string>
     <string name="text_blur">Please blur the photo.</string>
@@ -212,4 +213,24 @@
     <string name="text_name">Name</string>
     <string name="tv_comment_cat"><![CDATA[Free tickets for theatrical <attic cat> will be given every 10 minutes selected by lottery every week. I would like your participation. (♥ŐωŐ♥）]]></string>
     <string name="text_phone">Phone number</string>
+    <string name="text_font_1" translatable="false">Apple pie</string>
+    <string name="text_font_2" translatable="false">Banana bread</string>
+    <string name="text_font_3" translatable="false">Cupcake</string>
+    <string name="text_font_4" translatable="false">Donut</string>
+    <string name="text_font_5" translatable="false">Edair</string>
+    <string name="text_font_6" translatable="false">Proyo</string>
+    <string name="text_font_7" translatable="false">Gingerbread</string>
+    <string name="text_font_8" translatable="false">Honeycomb</string>
+    <string name="text_font_9" translatable="false">Ice Cream Sandwich</string>
+    <string name="text_font_10" translatable="false">JellyBean</string>
+    <string name="text_font_11" translatable="false">KitKat</string>
+    <string name="text_font_12" translatable="false">Lollipop</string>
+    <string name="text_font_13" translatable="false">Marshmallow</string>
+    <string name="text_font_14" translatable="false">Nougat</string>
+    <string name="text_font_15" translatable="false">Oreo</string>
+    <string name="text_font_16" translatable="false">Palmier</string>
+    <string name="text_font_17" translatable="false">Opera</string>
+    <string name="text_font_18" translatable="false">Macaron</string>
+    <string name="text_font_19" translatable="false">Gallette des rois</string>
+    <string name="text_font_20" translatable="false">Truffle</string>
 </resources>
