--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -155,6 +155,7 @@
 
     <string name="text_with">WITH</string>
     <string name="text_timeline">タイムライン</string>
+    <string name="text_diary">ダイアリー</string>
     <string name="text_recently_plan">最近の計画</string>
     <string name="text_plan_date_time">%s %s</string>
     <string name="text_decimal_day_minus">D%d</string>
