--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -147,7 +147,7 @@
     <string name="text_input_password">비밀번호를 입력하세요.</string>
     <string name="text_input_password_more">비밀번호를 한번 더 입력하세요.</string>
     <string name="text_cancel">취소</string>
-    <string name="text_day_registration">디데이 등록</string>
+    <string name="text_day_registration">디데이</string>
     <string name="text_day_content">디데이 내용을 입력하세요.</string>
 
     <string name="label_mon">월</string>
