--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -95,7 +95,7 @@
     <string name="toast_changed_profile_image">您的个人资料照片已更改。</string>
     <string name="toast_changed_nickname">昵称已更改。</string>
     <string name="toast_failed_request_day">无法获取小数日信息。</string>
-    <string name="text_day_registration">D-Day 报名</string>
+    <string name="text_day_registration">D-Day</string>
     <string name="text_day_content">请输入。</string>
     <string name="toast_success_diary_share">保存到相册。</string>
     <string name="toast_sign_out_greeting">感谢您使用[WITH]。</string>
